--- a/project-scaffolds/python-package/cluedo/www/templates/admin/index.html
+++ b/project-scaffolds/python-package/cluedo/www/templates/admin/index.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
-            <h1>Gleander Admin</h1>
+            <h1>Python Package Sample | Admin | makeall.dev</h1>
             <p class="lead">
                 Basic SQLAlchemy model views.
             </p>
