--- a/project-scaffolds/python-package/cluedo/www/templates/index.html
+++ b/project-scaffolds/python-package/cluedo/www/templates/index.html
@@ -1,6 +1,15 @@
-<!doctype html>
-<title>Wealthee</title>
-<p><a href="admin">Admin</a></p>
-<p><a href="quant">Quant</a></p>
-<p><a href="data">Data</a></p>
-<p><a href="ping">Health</a></p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Python package sample</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+</head>
+<body>
+    <h2>Redirecting to admin panel</h2>
+    <script>
+        window.location.href = "/admin";
+    </script>
+</body>
+</html>
